uncommenting appimage build and artifact upload

--- a/.github/workflows/cmake-nix.yml
+++ b/.github/workflows/cmake-nix.yml
@@ -54,26 +54,26 @@ jobs:
        
 
         # https://github.com/probonopd/go-appimage/blob/master/src/appimagetool/README.md
-        #wget -c https://github.com/$(wget -q https://github.com/probonopd/go-appimage/releases/expanded_assets/continuous -O - | grep "appimagetool-.*-x86_64.AppImage" | head -n 1 | cut -d '"' -f 2)
-        #chmod +x appimagetool-*.AppImage
+        wget -c https://github.com/$(wget -q https://github.com/probonopd/go-appimage/releases/expanded_assets/continuous -O - | grep "appimagetool-.*-x86_64.AppImage" | head -n 1 | cut -d '"' -f 2)
+        chmod +x appimagetool-*.AppImage
 
         # If you ever get an issue with appimage bundling the wrong Qt version,
         # try setting the  QTDIR env var (cf. https://github.com/probonopd/go-appimage/issues/268)
         # ./appimagetool-*.AppImage -s deploy appdir/usr/share/applications/*.desktop # Bundle EVERYTHING
         # or 
-        #./appimagetool-*.AppImage deploy appdir/usr/share/applications/*.desktop # Bundle everything except what comes with the base system
+        ./appimagetool-*.AppImage deploy appdir/usr/share/applications/*.desktop # Bundle everything except what comes with the base system
 
         # turn AppDir into AppImage
-        #VERSION=0.10 ./appimagetool-*.AppImage ./appdir
+        VERSION=wx0.10 ./appimagetool-*.AppImage ./appdir
 
-   # - name: Upload AppImage Artifact
-   #   uses: actions/upload-artifact@v4
-   #   with:
+    - name: Upload AppImage Artifact
+      uses: actions/upload-artifact@v4
+      with:
         # Artifact name
-        #name: wxOCVWarp-AppImage
+        name: wxOCVWarp-AppImage
         # optional, default is artifact
         # A file, directory or wildcard pattern that describes what to upload
-        #path: /home/runner/work/OpenSpace-AppImage/OpenSpace-AppImage/OpenSpace-*-x86_64.AppImage
+        path: build/OCVWarp*x86_64.AppImage
       
     
 
