cp to the required appdir paths

--- a/.github/workflows/cmake-nix.yml
+++ b/.github/workflows/cmake-nix.yml
@@ -51,7 +51,9 @@ jobs:
       # trying with go-appimage
       run: |
         echo "create appimage"
-       
+        mkdir -p appdir/usr/bin ; strip OCVWarp.bin ; cp OCVWarp.bin ./appdir/usr/bin/OCVWarp.bin
+        mkdir -p appdir/usr/share/applications ; cp ../appdir/OCVWarp.desktop ./appdir/usr/share/applications/
+        mkdir -p appdir/usr/share/icons/hicolor/256x256/apps ; cp ../appdir/OCVWarp.png ./appdir/usr/share/icons/hicolor/256x256/apps/       
 
         # https://github.com/probonopd/go-appimage/blob/master/src/appimagetool/README.md
         wget -c https://github.com/$(wget -q https://github.com/probonopd/go-appimage/releases/expanded_assets/continuous -O - | grep "appimagetool-.*-x86_64.AppImage" | head -n 1 | cut -d '"' -f 2)
