working dir for appimage creation should be build

--- a/.github/workflows/cmake-nix.yml
+++ b/.github/workflows/cmake-nix.yml
@@ -45,7 +45,7 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: Create appimage
-      working-directory: ${{github.workspace}}
+      working-directory: ${{github.workspace}}/build
       # https://appimage-builder.readthedocs.io/en/latest/hosted-services/github-actions.html
       # But instead of linuxdeployqt as in https://github.com/hn-88/OCVWarp/blob/master/.travis.yml
       # trying with go-appimage
