--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -17,24 +17,22 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-22.04
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v4
 
     - name: Install OpenCV
-      # We're using the distro's default opencv build, since that should be sufficient.
+      # We're using chocolatey's default opencv build, since that should be sufficient.
       run: |
-        sudo apt update
-        # sudo apt install libopencv-dev python3-opencv
+        Choco install OpenCV -y
 
     - name: Install wxWidgets
       # We're using the distro's default build, since that should be sufficient.
       run: |
-        sudo apt install libwxgtk3.0-gtk3-dev
-        # from https://packages.ubuntu.com/search?suite=jammy&keywords=wxgtk
-        # we would need to change version when upgrading ubuntu.
-        
+        choco install wxwidgets -y
+        # from https://community.chocolatey.org/packages/wxwidgets
+                
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
