--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -33,10 +33,10 @@ jobs:
         # https://docs.wxwidgets.org/3.2.1/plat_msw_binaries.html
         mkdir C:\wx
         cd C:\wx
-        wget https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.7/wxWidgets-3.2.7-headers.7z
-        wget https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.7/wxMSW-3.2.7_vc14x_x64_Dev.7z
-        wget https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.7/wxMSW-3.2.7_vc14x_x64_ReleaseDLL.7z
-        wget https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.7/wxMSW-3.2.7_vc14x_x64_ReleasePDB.7z
+        powershell -c "Invoke-WebRequest -Uri 'https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.7/wxWidgets-3.2.7-headers.7z' -OutFile 'wxWidgets-3.2.7-headers.7z'"
+        powershell -c "Invoke-WebRequest -Uri 'https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.7/wxMSW-3.2.7_vc14x_x64_Dev.7z -OutFile 'wxMSW-3.2.7_vc14x_x64_Dev.7z'"
+        powershell -c "Invoke-WebRequest -Uri 'https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.7/wxMSW-3.2.7_vc14x_x64_ReleaseDLL.7z -OutFile 'wxMSW-3.2.7_vc14x_x64_ReleaseDLL.7z'"
+        powershell -c "Invoke-WebRequest -Uri 'https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.7/wxMSW-3.2.7_vc14x_x64_ReleasePDB.7z -OutFile 'wxMSW-3.2.7_vc14x_x64_ReleasePDB.7z'"
         echo "Download complete. Extracting ... "
         7z x wxWidgets-3.2.7-headers.7z
         7z x wxMSW-3.2.7_vc14x_x64_Dev.7z
