--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -45,7 +45,7 @@ jobs:
         # setx WXWIN C:\wx
         # setx ARCH x64
         # specify source and build dirs with -S and -B
-        cmake -G"Visual Studio 17 2022 Win64" -S .. -DCMAKE_INSTALL_PREFIX=${{env.WXWIN}} -DCMAKE_GENERATOR_PLATFORM=${{env.ARCH}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        cmake -G"Visual Studio 17 2022" -S .. -DCMAKE_INSTALL_PREFIX=${{env.WXWIN}} -DCMAKE_GENERATOR_PLATFORM=${{env.ARCH}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
         cmake --build . --config ${{env.BUILD_TYPE}} --target install
         
                 
