--- a/.github/workflows/cmake-windows-precompiledwx.yml
+++ b/.github/workflows/cmake-windows-precompiledwx.yml
@@ -13,6 +13,8 @@ env:
   BUILD_TYPE: Release
   WXWIN: C:/wxWidgets-3.1.2
   # assuming the setup.exe installs to this directory as per logs "deployed to"
+  WXLIB: C:/wxWidgets-3.1.2/include)
+  WXINCLUDEDIR: C:/wxWidgets-3.1.2/lib/vc14x_x64_dll
   ARCH: x64
 
 jobs:
@@ -44,7 +46,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -G"Visual Studio 17 2022" -B ${{github.workspace}}/build -DwxWidgets_ROOT_DIR=${{env.WXWIN}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -G"Visual Studio 17 2022" -B ${{github.workspace}}/build -DwxWidgets_ROOT_DIR=${{env.WXWIN}} -DwxWidgets_LIBRARIES=${{env.WXLIB}} -DwxWidgets_INCLUDE_DIRS=${{env.WXINCLUDEDIR}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
