--- a/.github/workflows/cmake-windows-precompiledwx.yml
+++ b/.github/workflows/cmake-windows-precompiledwx.yml
@@ -13,7 +13,7 @@ env:
   BUILD_TYPE: Release
   WXWIN: C:/wxWidgets-3.1.2
   # assuming the setup.exe installs to this directory as per logs "deployed to"
-  WXLIB: C:/wxWidgets-3.1.2/include)
+  WXLIB: C:/wxWidgets-3.1.2/include
   WXINCLUDEDIR: C:/wxWidgets-3.1.2/lib/vc14x_x64_dll
   ARCH: x64
 
