--- a/.github/workflows/cmake-windows-precompiledwx.yml
+++ b/.github/workflows/cmake-windows-precompiledwx.yml
@@ -63,7 +63,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -G"Visual Studio 17 2022" -B ${{github.workspace}}/build -DwxWidgets_ROOT_DIR=${{env.WXWIN}} -DwxWidgets_LIBRARIES=${{env.WXLIB}} -DwxWidgets_INCLUDE_DIRS=${{env.WXINCLUDEDIR}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -G"Visual Studio 17 2022" -B ${{github.workspace}}/build -DwxWidgets_ROOT_DIR=${{env.WXWIN}} -DwxWidgets_LIBRARIES=${{env.wxWidgets_LIBRARIES}} -DwxWidgets_INCLUDE_DIRS=${{env.wxWidgets_INCLUDE_DIRS}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
